[package]
name = "cli-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-rt = "0.2.1"
prost = "0.8"
reqwest = { version = "0.11.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio_schedule = "0.3.0"
