[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.19", features = ["derive"] }
gtfs-rt = "0.2.1"
prost = "0.8"
reqwest = { version = "0.11.12", features = ["rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tokio_schedule = "0.3.0"
